# pcaudiolib

./: .gitignore  .gitmodules  CHANGELOG.md  ChangeLog.md  Makefile.am  README.md  configure.ac
src/: alsa.c  audio.c  audio_priv.h  coreaudio.c  netbsd.c  oss.c  pulseaudio.c  qsa.c  sndio.c  sun.c  windows.c  xaudio2.cpp
src/TPCircularBuffer/: TPCircularBuffer+AudioBufferList.c  TPCircularBuffer.h
src/include/pcaudiolib/: audio.h
